[BUILD-CORE]: Base RestApi
